# calories_counter

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c774e487656_init.py
app/: main.py
app/db/: models.py
