[project]
name = "calories-counter"
version = "0.1.0"
description = "A simple app for calculating calories"
authors = [
    {name = "m.zherebtsov",email = "m.zherebtsov@definnovation.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry.scripts]
calories = "app.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
ruff = "^0.12.3"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
